static/css/my-style.css
/* Body
============================================================= */
body:before, body:after {
  content: "";
  position: fixed;
  background: black;
  left: 0;
  right: 0;
  height: 10px;
}
body:before {
  top: 0;
}
body:after {
  bottom: 0;
}
body {
  border-left: 10px solid black;
  border-right: 10px solid black;  
}
/* Header
============================================================= */
.header,
.home .header {
  background: black;
  color: white;
}

.header {
  padding-left: 0px;
  padding-right: 0px;
}

.menu-toggle {
  margin-left: 15px;
  margin-right: 35px;
  z-index: 1;
}
.menu-toggle::before,
.menu-toggle::after {
  background: white;
}


.noscroll .menu-toggle::before {
  transform: translate3d(-50%, -5px, 0);
}
.noscroll .menu-toggle::after {
  transform: translate3d(-50%, 5px, 0);
}

.home {
  background: #fff;
}
.menu ul {
  background: black;
}

 /* The side navigation menu */
 .sidenav {
  height: 100%; /* 100% Full-height */
  width: 0; /* 0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 1; /* Stay on top */
  top: 0; /* Stay at the top */
  left: 0;
  background-color: black; /* Black*/
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 60px; /* Place content 60px from the top */
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

/* The navigation menu links */
.sidenav li a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
  color: #f1f1f1;
}

/* Position and style the close button (top right corner) */
.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
#main {
  transition: margin-left .5s;
  padding: 20px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
} 

.first-entry {
  background: inherit;
}

